--- a/DesignPattern/bin/.gitignore
+++ b/DesignPattern/bin/.gitignore
@@ -5,3 +5,5 @@
 /ThreadedLazySingletonClient.class
 /ThreadSafeLazySingleton.class
 /ThreadSafeLazySingletonClient.class
+/SingletonPattern/
+/FactoryPattern/
